<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.gmail.vdpotvin.shoppingcalc.MainActivity"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/calcFunctionText"
            android:text="Hello World!"
            android:gravity="left"
            android:paddingLeft="@dimen/activity_horizontal_margin"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="50dp"
            android:gravity="right"
            android:text="@string/startCalc"
            android:paddingRight="@dimen/activity_horizontal_margin"/>

        <!-- This LinearLayout configures Calculator Buttons -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.gmail.vdpotvin.shoppingcalc.views.SquareButton
                android:text="@string/_7"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                style="@style/SCButtonCalcStyle"
                />
            <com.gmail.vdpotvin.shoppingcalc.views.SquareButton
                android:text="@string/_8"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                style="@style/SCButtonCalcStyle"
                />
            <com.gmail.vdpotvin.shoppingcalc.views.SquareButton
                android:text="@string/_9"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                style="@style/SCButtonCalcStyle"
                />
            <com.gmail.vdpotvin.shoppingcalc.views.SquareButton
                android:text="-"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                style="@style/SCButtonCalcStyle"
                />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <com.gmail.vdpotvin.shoppingcalc.views.SquareButton
                        android:text="@string/_4"
                        android:layout_height="wrap_content"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        style="@style/SCButtonCalcStyle"
                        />

                    <com.gmail.vdpotvin.shoppingcalc.views.SquareButton
                        android:text="@string/_5"
                        android:layout_height="wrap_content"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        style="@style/SCButtonCalcStyle"
                        />

                    <com.gmail.vdpotvin.shoppingcalc.views.SquareButton
                        android:text="@string/_6"
                        android:layout_height="wrap_content"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        style="@style/SCButtonCalcStyle"
                        />

                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.gmail.vdpotvin.shoppingcalc.views.SquareButton
                        android:text="@string/_1"
                        android:layout_height="wrap_content"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        style="@style/SCButtonCalcStyle"
                        />
                    <com.gmail.vdpotvin.shoppingcalc.views.SquareButton
                        android:text="@string/_2"
                        android:layout_height="wrap_content"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        style="@style/SCButtonCalcStyle"
                        />
                    <com.gmail.vdpotvin.shoppingcalc.views.SquareButton
                        android:text="@string/_3"
                        android:layout_height="wrap_content"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        style="@style/SCButtonCalcStyle"
                        />
                </LinearLayout>
            </LinearLayout>

                <Button
                    android:text="@string/plus"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:id="@+id/button2"
                    android:layout_weight="1"
                    style="@style/SCButtonCalcStyle"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/zero"
                style="@style/SCButtonCalcStyle"/>
            <com.gmail.vdpotvin.shoppingcalc.views.SquareButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/decimal"
                style="@style/SCButtonCalcStyle"/>
            <com.gmail.vdpotvin.shoppingcalc.views.SquareButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/equals"
                style="@style/SCButtonCalcStyle"/>
        </LinearLayout>



    </LinearLayout>





    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:background="@color/colorPrimaryDark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id">
    </com.google.android.gms.ads.AdView>

</LinearLayout>
